--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -160,10 +160,10 @@
         <li>
           <a
             class="dropdown-item d-flex align-items-center gap-2"
-            routerLink="/settings"
+            routerLink="/about-us"
           >
-            <i class="bi bi-gear"></i>
-            Settings
+            <i class="bi bi-card-text"></i>
+            About Us
           </a>
         </li>
         <li>
@@ -175,15 +175,15 @@
             Contact Us
           </a>
         </li>
-        <li>
+        <!-- <li>
           <a
             class="dropdown-item d-flex align-items-center gap-2"
-            routerLink="/about-us"
+            routerLink="/settings"
           >
-            <i class="bi bi-envelope-paper"></i>
-            About Us
+            <i class="bi bi-gear"></i>
+            Settings
           </a>
-        </li>
+        </li> -->
         <li>
           <a
             class="dropdown-item d-flex align-items-center gap-2"
